examples/smlfmt-1.2.0/test/fail/mixfix-2.mlb
mixfix-2/infix.sml
local
  mixfix-2/nonfix.sml
in
mixfix-2/use-nonfix.sml
end
mixfix-2/use-nonfix.sml
